--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     button.addEventListener('click', setFullScreen, false);
 
     function playAudio() {
-      const audio = new Audio('moans.mp3');
+      const audio = new Audio('sound.mp3');
       audio.play();
     }
     window.onload = playAudio;
